Migrate to new JSONObject/JSONArray (#155)